Style Card: Update active style and fix Title/Active margin and wrapping

--- a/assets/components/src/style-card/style.scss
+++ b/assets/components/src/style-card/style.scss
@@ -8,8 +8,11 @@
 .newspack-style-card {
   border: 1px solid $light-gray-200;
   border-radius: 3px;
+  box-sizing: border-box;
   margin: 32px 0;
   overflow: hidden;
+  padding: 8px;
+  width: 100%;
 
   &:hover,
   &:focus {
@@ -21,7 +24,7 @@
 
   // Active
   &.newspack-style-card__is-active {
-    border-color: white;
+    border-color: $primary-600;
     box-shadow: 0 0 0 2px $primary-500;
 
     .newspack-style-card__actions {
@@ -32,7 +35,7 @@
       background: $primary-500;
       color: white;
 
-      .newspack-style-card__title {
+      .newspack-style-card__heading {
         color: inherit;
         font-weight: bold;
       }
@@ -44,6 +47,7 @@
     position: relative;
 
     img {
+      border-radius: 2px 2px 0 0;
       display: block;
       height: auto;
       max-width: 100%;
@@ -52,10 +56,17 @@
 
   // Content
   .newspack-style-card__content {
-    .newspack-style-card__title {
+    border-radius: 0 0 2px 2px;
+
+    .newspack-style-card__heading {
       display: flex;
+      flex-wrap: wrap;
       margin: 0;
       padding: 16px;
+    }
+
+    .newspack-style-card__title {
+      margin-right: 8px;
     }
 
     .newspack-style-card__status {
@@ -66,7 +77,7 @@
       font-size: 12px;
       font-weight: bold;
       line-height: 16px;
-      margin: 3px 8px;
+      margin: 3px 0;
       padding: 0 8px;
       text-transform: uppercase;
     }
